[tool.poetry]
name = "Lib"
version = "0.1.0"
description = "\"\""
authors = ["Jarod Gerart <jarod.gerart37@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
rich = "^13.7.1"
typer = "^0.12.3"
ruff = "^0.3.7"
networkx = "^3.3"
matplotlib = "^3.8.4"
tabulate = "^0.9.0"
pytest-cov = "^5.0.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.0"
pytest = "^8.1.1"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
